--- a/package.json
+++ b/package.json
@@ -1,27 +1,48 @@
 {
-	"name": "svelte-wish-gen",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.28.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-vercel": "^5.7.2",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"eslint": "^9.28.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.34.0",
-		"vite": "^6.2.6"
-	}
+    "name": "svelte-wish-gen",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "prepare": "husky",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "eslint . --ext .js,.ts,.svelte",
+        "format": "npx prettier . --write"
+    },
+    "prisma": {
+        "seed": "tsx prisma/seed.ts"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.28.0",
+        "@sveltejs/adapter-auto": "^6.0.0",
+        "@sveltejs/adapter-vercel": "^5.7.2",
+        "@sveltejs/kit": "^2.16.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "eslint": "^9.28.0",
+        "eslint-config-prettier": "^10.1.5",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.2",
+        "prettier": "3.6.1",
+        "prisma": "^6.9.0",
+        "svelte": "^5.0.0",
+        "svelte-check": "^4.0.0",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.34.0",
+        "vite": "^6.2.6"
+    },
+    "dependencies": {
+        "@prisma/client": "^6.9.0",
+        "@prisma/extension-accelerate": "^2.0.1",
+        "@tailwindcss/vite": "^4.1.10",
+        "slug": "^11.0.0",
+        "tailwindcss": "^4.1.10",
+        "vite-plugin-commonjs": "^0.10.4"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
+    }
 }
