--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "eslint . --ext .js,.ts,.svelte",
-        "format": "npx prettier . --write"
+        "format": "npx prettier . --write",
+        "postinstall": "prisma generate"
     },
     "prisma": {
         "seed": "tsx prisma/seed.ts"
