--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
         "@sveltejs/adapter-vercel": "^5.7.2",
         "@sveltejs/kit": "^2.16.0",
         "@sveltejs/vite-plugin-svelte": "^5.0.0",
-        "eslint": "^9.28.0",
+        "eslint": "^9.30.1",
         "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-svelte": "^3.10.1",
+        "globals": "^16.3.0",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
         "prettier": "3.6.1",
         "prisma": "^6.9.0",
-        "svelte": "^5.0.0",
+        "svelte": "^5.35.2",
         "svelte-check": "^4.0.0",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.34.0",
