--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@sveltejs/adapter-vercel": "^5.7.2",
         "@sveltejs/kit": "^2.16.0",
         "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "@types/slug": "^5.0.9",
         "eslint": "^9.30.1",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-svelte": "^3.10.1",
