--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
         "vite": "^6.2.6"
     },
     "dependencies": {
+        "@google-cloud/storage": "^7.17.1",
         "@prisma/client": "^6.11.1",
         "@prisma/extension-accelerate": "^2.0.2",
         "@tailwindcss/vite": "^4.1.10",
         "@vercel/analytics": "^1.5.0",
         "bindings": "^1.5.0",
+        "resend": "^6.0.2",
         "slug": "^11.0.0",
         "sweetalert2": "^11.22.5",
         "tailwindcss": "^4.1.10",
