--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@prisma/extension-accelerate": "^2.0.2",
         "@tailwindcss/vite": "^4.1.10",
         "@vercel/analytics": "^1.5.0",
+        "@vercel/blob": "^1.1.1",
         "bindings": "^1.5.0",
         "resend": "^6.0.2",
         "slug": "^11.0.0",
