--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-# Resend API for email functionality
-RESEND_API_KEY=your_resend_api_key_here
+RESEND_API_KEY=
+DATABASE_URL=
+BLOB_READ_WRITE_TOKEN=
+OPTIMIZE_API_KEY=
