Tons of improvements yuk

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,13 @@
 {
-    "trailingComma": "es5",
-    "semi": false,
     "tabWidth": 4,
-    "singleQuote": true,
-    "bracketSpacing": true,
-    "bracketSameLine": true
+    "useTabs": false,
+    "plugins": ["prettier-plugin-svelte"],
+    "overrides": [
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte"
+            }
+        }
+    ]
 }
