--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "prepare": "husky",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "eslint . --ext .js,.ts,.svelte",
+        "lint": "eslint . --ext .js,.ts,.svelte && prettier --check .",
         "format": "npx prettier . --write",
         "postinstall": "prisma generate"
     },
@@ -25,13 +25,14 @@
         "@sveltejs/vite-plugin-svelte": "^5.0.0",
         "@types/slug": "^5.0.9",
         "eslint": "^9.30.1",
-        "eslint-config-prettier": "^10.1.5",
+        "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-svelte": "^3.10.1",
         "globals": "^16.3.0",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
-        "prettier": "3.6.1",
-        "prisma": "^6.11.1",
+        "prettier": "^3.4.2",
+        "prettier-plugin-svelte": "^3.3.3",
+        "prisma": "^6.16.1",
         "svelte": "^5.35.2",
         "svelte-check": "^4.0.0",
         "typescript": "^5.8.3",
@@ -40,12 +41,15 @@
     },
     "dependencies": {
         "@google-cloud/storage": "^7.17.1",
-        "@prisma/client": "^6.11.1",
+        "@prisma/client": "^6.16.1",
         "@prisma/extension-accelerate": "^2.0.2",
+        "@prisma/extension-optimize": "^2.0.0",
+        "@prisma/instrumentation": "^6.16.1",
         "@tailwindcss/vite": "^4.1.10",
         "@vercel/analytics": "^1.5.0",
         "@vercel/blob": "^1.1.1",
         "bindings": "^1.5.0",
+        "gsap": "^3.13.0",
         "resend": "^6.0.2",
         "slug": "^11.0.0",
         "sweetalert2": "^11.22.5",
